# statguessr

./: .env.example  .gitignore  Makefile  README.md  app.js  package-lock.json  package.json  tsconfig.base.json
apps/api/: .env.example  Dockerfile  alembic.ini  pyproject.toml  test_relay_console.db
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_identity_and_access.py
apps/api/src/relay_console/: __init__.py  main.py  seed.py  worker.py
apps/api/src/relay_console/api/: __init__.py  deps.py  router.py
apps/api/src/relay_console/core/: config.py  security.py
apps/api/src/relay_console/db/: base.py  session.py
apps/api/src/relay_console/modules/api_keys/: __init__.py  models.py  router.py  schemas.py  service.py
apps/api/src/relay_console/modules/audit/: models.py  router.py  schemas.py  service.py
apps/api/src/relay_console/modules/auth/: models.py  router.py  schemas.py  service.py
apps/api/src/relay_console/modules/health/: router.py
apps/api/src/relay_console/modules/iam/: __init__.py  models.py  router.py  schemas.py  service.py
apps/api/src/relay_console_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/api/tests/: conftest.py  test_auth_and_workspaces.py
apps/web/: .env.example  Dockerfile  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx
data/: cities.js  cities.json
docs/: architecture.md  deployment.md  openapi.yaml  prd.md  schema.md  sdk-spec.md
infra/compose/: docker-compose.yml
legacy/statguessr/: README.md  index.html  styles.css
tools/: fetch_numbeo.py
(+23 files in other folders)
